--- a/Elegant_Waterfall.ipynb
+++ b/Elegant_Waterfall.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,18 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overall number of unique customers who bought:  515182\n",
-      "Unique asins:  14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Overall number of unique customers who bought: \" , new_df['encrypted_customer_id'].nunique())\n",
     "print(\"Unique asins: \", new_df['asin'].nunique())"
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +208,7 @@
    "outputs": [],
    "source": [
     "def create_matrix(df,range_start,range_end):\n",
-    "    \n",
+    "    \"\"\"function calculates recursively how many bought in a specific season of a series\"\"\"\n",
     "    new_table = []\n",
     "    \n",
     "    for i in range(range_start,range_end + 1):\n",
@@ -225,7 +216,24 @@
     "        for j in range(i, range_end + 1):\n",
     "            new_list.append(recursive_call_funnel(df,j,i).nunique())\n",
     "        new_table.append(new_list)\n",
-    "    return new_table"
+    "        \n",
+    "        \n",
+    "    output = []\n",
+    "    for j in range(0, len(new_table)):\n",
+    "        output.append([ round(i  /  new_table[j][0],2) for i in new_table[j]])\n",
+    "    \n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "new_table_total = create_matrix(new_df, 1, 8)"
    ]
   },
   {
@@ -234,8 +242,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table_total = create_matrix(new_df, 1, 8)"
+    "new_table_total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
