--- a/Elegant_Waterfall.ipynb
+++ b/Elegant_Waterfall.ipynb
@@ -11,14 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import math\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,9 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall number of unique customers who bought:  515182\n",
+      "Unique asins:  14\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Overall number of unique customers who bought: \" , new_df['encrypted_customer_id'].nunique())\n",
     "print(\"Unique asins: \", new_df['asin'].nunique())"
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -227,22 +239,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table_total = create_matrix(new_df, 1, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1.0, 0.68, 0.57, 0.51, 0.45, 0.41, 0.36],\n",
+       " [1.0, 0.8, 0.71, 0.62, 0.56, 0.49],\n",
+       " [1.0, 0.85, 0.73, 0.65, 0.57],\n",
+       " [1.0, 0.76, 0.66, 0.56],\n",
+       " [1.0, 0.79, 0.66],\n",
+       " [1.0, 0.75],\n",
+       " [1.0]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_table_total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Median time between purchases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "new_table_total = create_matrix(new_df, 1, 8)"
+    "def from_long_to_wide(df,dimension1, dimension2):\n",
+    "    \"\"\"convert from wide to long\"\"\"\n",
+    "    return df.pivot_table(index = 'encrypted_customer_id', \n",
+    "                          columns = dimension1, values = dimension2).reset_index()\n",
+    "\n",
+    "\n",
+    "def add_intervals(df):\n",
+    "    \"\"\"function goes thru all combinations of season purchases\n",
+    "    and calculates time frame between purchases\"\"\"\n",
+    "    df_wide = from_long_to_wide(df,\"title\",\"days_since_epoch\")\n",
+    "    \n",
+    "    for i in range(2,df_wide.shape[1]):\n",
+    "        df_wide[i] = df_wide.iloc[:,i] - df_wide.iloc[:,i-1]\n",
+    "    return df_wide    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_wide = add_intervals(new_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table_total"
+    "def get_combinations(df):\n",
+    "    \n",
+    "    df = df.sort_values(by = ['encrypted_customer_id','transaction_date'])\n",
+    "    \n",
+    "    t = pd.DataFrame(df.groupby(\"encrypted_customer_id\")['season_number'].agg(lambda x: x.tolist())).reset_index()\n",
+    "    t.columns = ['encrypted_customer_id','combination']\n",
+    "    \n",
+    "    #Get intersection in case you have have 2 column of lists\n",
+    "    #df['intersection'] = [list(set(a).intersection(set(b))) for a, b in zip(df.A, df.B)]\n",
+    "    \n",
+    "    \n",
+    "    t['combination'] = t.apply(lambda row: set(row['combination']), axis=1)    \n",
+    "    \n",
+    "    count_combo = t['combination'].apply(tuple)\n",
+    "    d = Counter(elem for elem in count_combo)\n",
+    "    \n",
+    "    df_output = pd.DataFrame.from_dict(d, orient='index').reset_index()\n",
+    "    \n",
+    "    df_output.columns = ['combination','count']\n",
+    "    return df_output, t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>combination</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(7,)</td>\n",
+       "      <td>183903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(6, 7)</td>\n",
+       "      <td>53593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(1, 2, 3, 4, 5, 6, 7)</td>\n",
+       "      <td>53340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(1,)</td>\n",
+       "      <td>32802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>(6,)</td>\n",
+       "      <td>30050</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              combination   count\n",
+       "0                    (7,)  183903\n",
+       "8                  (6, 7)   53593\n",
+       "6   (1, 2, 3, 4, 5, 6, 7)   53340\n",
+       "4                    (1,)   32802\n",
+       "11                   (6,)   30050"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final, t = get_combinations(df)\n",
+    "\n",
+    "final = final.sort_values(by = \"count\", ascending=False)\n",
+    "final.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Days between purchases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# for i in range(2,7+1):\n",
+    "#     print(\"Percentiles from season %d to previous one\" %i)   \n",
+    "#     print(df_wide[ pd.isnull(df_wide[i]) == False ][i].quantile(np.linspace(.1, 1, 9, 0), 'lower'))"
    ]
   },
   {
