--- a/Evaluation Framework.ipynb
+++ b/Evaluation Framework.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df1 = pd.read_csv(\"../data/pmd_customers_in_one_campaign.txt\", sep = \"\\t\", header=None)\n",
@@ -93,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "frames = [df1,df2]\n",
@@ -275,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def agg_top_level(df, metric, parameter = None):\n",
@@ -325,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def to_pivot(df):\n",
@@ -658,30 +666,418 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>what_period</th>\n",
+       "      <th>pmd</th>\n",
+       "      <th>segment</th>\n",
+       "      <th>campaign_period</th>\n",
+       "      <th>not_known</th>\n",
+       "      <th>post_period</th>\n",
+       "      <th>pre_period</th>\n",
+       "      <th>change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>highest_engaged</td>\n",
+       "      <td>9.209994</td>\n",
+       "      <td>241.859598</td>\n",
+       "      <td>30.537278</td>\n",
+       "      <td>35.557445</td>\n",
+       "      <td>-0.141185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>low_engaged</td>\n",
+       "      <td>6.311772</td>\n",
+       "      <td>47.359573</td>\n",
+       "      <td>14.009607</td>\n",
+       "      <td>10.180426</td>\n",
+       "      <td>0.376132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>lowest_engaged</td>\n",
+       "      <td>5.737542</td>\n",
+       "      <td>28.932554</td>\n",
+       "      <td>11.957628</td>\n",
+       "      <td>5.968779</td>\n",
+       "      <td>1.003362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>mid_engaged</td>\n",
+       "      <td>6.982217</td>\n",
+       "      <td>79.242348</td>\n",
+       "      <td>16.857233</td>\n",
+       "      <td>15.537756</td>\n",
+       "      <td>0.084921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>not_bought_at_least_year_before_event</td>\n",
+       "      <td>5.461684</td>\n",
+       "      <td>21.718307</td>\n",
+       "      <td>11.531567</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>highest_engaged</td>\n",
+       "      <td>7.448476</td>\n",
+       "      <td>301.248010</td>\n",
+       "      <td>33.875184</td>\n",
+       "      <td>33.136002</td>\n",
+       "      <td>0.022307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>low_engaged</td>\n",
+       "      <td>3.300726</td>\n",
+       "      <td>44.122512</td>\n",
+       "      <td>11.600526</td>\n",
+       "      <td>7.628718</td>\n",
+       "      <td>0.520639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>lowest_engaged</td>\n",
+       "      <td>2.994973</td>\n",
+       "      <td>28.305297</td>\n",
+       "      <td>10.766843</td>\n",
+       "      <td>4.945645</td>\n",
+       "      <td>1.177035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>mid_engaged</td>\n",
+       "      <td>3.853449</td>\n",
+       "      <td>72.236787</td>\n",
+       "      <td>13.862187</td>\n",
+       "      <td>10.796435</td>\n",
+       "      <td>0.283960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>not_bought_at_least_year_before_event</td>\n",
+       "      <td>2.710608</td>\n",
+       "      <td>19.999504</td>\n",
+       "      <td>10.562113</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "what_period      pmd                                segment  campaign_period  \\\n",
+       "0            non_pmd                        highest_engaged         9.209994   \n",
+       "1            non_pmd                            low_engaged         6.311772   \n",
+       "2            non_pmd                         lowest_engaged         5.737542   \n",
+       "3            non_pmd                            mid_engaged         6.982217   \n",
+       "4            non_pmd  not_bought_at_least_year_before_event         5.461684   \n",
+       "5                pmd                        highest_engaged         7.448476   \n",
+       "6                pmd                            low_engaged         3.300726   \n",
+       "7                pmd                         lowest_engaged         2.994973   \n",
+       "8                pmd                            mid_engaged         3.853449   \n",
+       "9                pmd  not_bought_at_least_year_before_event         2.710608   \n",
+       "\n",
+       "what_period   not_known  post_period  pre_period    change  \n",
+       "0            241.859598    30.537278   35.557445 -0.141185  \n",
+       "1             47.359573    14.009607   10.180426  0.376132  \n",
+       "2             28.932554    11.957628    5.968779  1.003362  \n",
+       "3             79.242348    16.857233   15.537756  0.084921  \n",
+       "4             21.718307    11.531567         NaN       NaN  \n",
+       "5            301.248010    33.875184   33.136002  0.022307  \n",
+       "6             44.122512    11.600526    7.628718  0.520639  \n",
+       "7             28.305297    10.766843    4.945645  1.177035  \n",
+       "8             72.236787    13.862187   10.796435  0.283960  \n",
+       "9             19.999504    10.562113         NaN       NaN  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_deep"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def max_levels(df, metric):\n",
+    "    d = df.groupby(['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\"]).agg({'revenue':['sum','median'],\n",
+    "                                               'units':['sum','median'],\n",
+    "                                               'encrypted_customer_id': lambda x: x.nunique()}).reset_index()\n",
+    "    \n",
+    "    d.columns = d.columns.droplevel()\n",
+    "    d.columns = ['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\",'revenue_sum','revenue_median',\n",
+    "                                   'units_sum','units_median','distinct_customers']\n",
+    "    \n",
+    "    d['asp']  = d['revenue_sum'] / d['units_sum']\n",
+    "    d['upc']  = d['units_sum'] / d['distinct_customers']\n",
+    "    d['arpu'] = d['revenue_sum'] / d['distinct_customers']\n",
+    "    \n",
+    "    \n",
+    "    out = pd.pivot_table(d, index = ['pmd','segment'], columns = ['what_period','is_promo','is_pmd'], values=metric).reset_index()\n",
+    "    #out['change'] = out['post_period'] / out['pre_period'] - 1\n",
+    "    return d, out"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d, m = max_levels(combined_df,'upc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>what_period</th>\n",
+       "      <th>pmd</th>\n",
+       "      <th>segment</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">post_period</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">pre_period</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_promo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>non_promo</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">promo</th>\n",
+       "      <th>non_promo</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">promo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_pmd</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>non_pmd</th>\n",
+       "      <th>is_pmd</th>\n",
+       "      <th>non_pmd</th>\n",
+       "      <th>non_pmd</th>\n",
+       "      <th>is_pmd</th>\n",
+       "      <th>non_pmd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>highest_engaged</td>\n",
+       "      <td>5.306987</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.361058</td>\n",
+       "      <td>6.662985</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.841424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>low_engaged</td>\n",
+       "      <td>2.552567</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.673816</td>\n",
+       "      <td>1.931473</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.170825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>lowest_engaged</td>\n",
+       "      <td>2.305617</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.592120</td>\n",
+       "      <td>1.203445</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.052880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>mid_engaged</td>\n",
+       "      <td>2.977296</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.817451</td>\n",
+       "      <td>2.855199</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.325162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>non_pmd</td>\n",
+       "      <td>not_bought_at_least_year_before_event</td>\n",
+       "      <td>2.354672</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.584607</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>highest_engaged</td>\n",
+       "      <td>6.330317</td>\n",
+       "      <td>2.086035</td>\n",
+       "      <td>2.946892</td>\n",
+       "      <td>6.645159</td>\n",
+       "      <td>1.816557</td>\n",
+       "      <td>1.986540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>low_engaged</td>\n",
+       "      <td>2.481660</td>\n",
+       "      <td>1.557099</td>\n",
+       "      <td>1.804572</td>\n",
+       "      <td>1.701713</td>\n",
+       "      <td>1.208359</td>\n",
+       "      <td>1.124830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>lowest_engaged</td>\n",
+       "      <td>2.385386</td>\n",
+       "      <td>1.466708</td>\n",
+       "      <td>1.761831</td>\n",
+       "      <td>1.175302</td>\n",
+       "      <td>1.068995</td>\n",
+       "      <td>1.033670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>mid_engaged</td>\n",
+       "      <td>2.832289</td>\n",
+       "      <td>1.635553</td>\n",
+       "      <td>1.930301</td>\n",
+       "      <td>2.329836</td>\n",
+       "      <td>1.344718</td>\n",
+       "      <td>1.238264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>pmd</td>\n",
+       "      <td>not_bought_at_least_year_before_event</td>\n",
+       "      <td>2.437840</td>\n",
+       "      <td>1.486902</td>\n",
+       "      <td>1.714865</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "what_period      pmd                                segment post_period  \\\n",
+       "is_promo                                                      non_promo   \n",
+       "is_pmd                                                          non_pmd   \n",
+       "0            non_pmd                        highest_engaged    5.306987   \n",
+       "1            non_pmd                            low_engaged    2.552567   \n",
+       "2            non_pmd                         lowest_engaged    2.305617   \n",
+       "3            non_pmd                            mid_engaged    2.977296   \n",
+       "4            non_pmd  not_bought_at_least_year_before_event    2.354672   \n",
+       "5                pmd                        highest_engaged    6.330317   \n",
+       "6                pmd                            low_engaged    2.481660   \n",
+       "7                pmd                         lowest_engaged    2.385386   \n",
+       "8                pmd                            mid_engaged    2.832289   \n",
+       "9                pmd  not_bought_at_least_year_before_event    2.437840   \n",
+       "\n",
+       "what_period                     pre_period                      \n",
+       "is_promo        promo            non_promo     promo            \n",
+       "is_pmd         is_pmd   non_pmd    non_pmd    is_pmd   non_pmd  \n",
+       "0                 NaN  2.361058   6.662985       NaN  1.841424  \n",
+       "1                 NaN  1.673816   1.931473       NaN  1.170825  \n",
+       "2                 NaN  1.592120   1.203445       NaN  1.052880  \n",
+       "3                 NaN  1.817451   2.855199       NaN  1.325162  \n",
+       "4                 NaN  1.584607        NaN       NaN       NaN  \n",
+       "5            2.086035  2.946892   6.645159  1.816557  1.986540  \n",
+       "6            1.557099  1.804572   1.701713  1.208359  1.124830  \n",
+       "7            1.466708  1.761831   1.175302  1.068995  1.033670  \n",
+       "8            1.635553  1.930301   2.329836  1.344718  1.238264  \n",
+       "9            1.486902  1.714865        NaN       NaN       NaN  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[['pmd','segment','post_period','pre_period']]"
+   ]
   }
  ],
  "metadata": {
