--- a/Evaluation Framework.ipynb
+++ b/Evaluation Framework.ipynb
@@ -841,242 +841,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "def max_levels(df, metric):\n",
+    "    \n",
     "    d = df.groupby(['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\"]).agg({'revenue':['sum','median'],\n",
     "                                               'units':['sum','median'],\n",
     "                                               'encrypted_customer_id': lambda x: x.nunique()}).reset_index()\n",
-    "    \n",
+    "\n",
     "    d.columns = d.columns.droplevel()\n",
     "    d.columns = ['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\",'revenue_sum','revenue_median',\n",
     "                                   'units_sum','units_median','distinct_customers']\n",
-    "    \n",
+    "\n",
     "    d['asp']  = d['revenue_sum'] / d['units_sum']\n",
     "    d['upc']  = d['units_sum'] / d['distinct_customers']\n",
     "    d['arpu'] = d['revenue_sum'] / d['distinct_customers']\n",
+    "\n",
+    "\n",
+    "    out = pd.pivot_table(d, index = ['pmd','segment'], columns = ['what_period','is_promo','is_pmd'], \n",
+    "                         values=[metric]).reset_index()   \n",
+    "\n",
+    "    out.columns = out.columns.droplevel(0)\n",
+    "\n",
+    "    final = out.iloc[:,[0,1,13,12,11,10,9,8]]\n",
+    "\n",
+    "    return d, final  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d, m = max_levels(combined_df,\"revenue_sum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_levels_all(df):\n",
     "    \n",
-    "    \n",
-    "    out = pd.pivot_table(d, index = ['pmd','segment'], columns = ['what_period','is_promo','is_pmd'], values=metric).reset_index()\n",
-    "    #out['change'] = out['post_period'] / out['pre_period'] - 1\n",
+    "    d = df.groupby(['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\"]).agg({'revenue':['sum','median'],\n",
+    "                                               'units':['sum','median'],\n",
+    "                                               'encrypted_customer_id': lambda x: x.nunique()}).reset_index()\n",
+    "\n",
+    "    d.columns = d.columns.droplevel()\n",
+    "    d.columns = ['pmd','what_period',\"segment\",\"is_promo\",\"is_pmd\",'revenue_sum','revenue_median',\n",
+    "                                   'units_sum','units_median','distinct_customers']\n",
+    "\n",
+    "    d['asp']  = d['revenue_sum'] / d['units_sum']\n",
+    "    d['upc']  = d['units_sum'] / d['distinct_customers']\n",
+    "    d['arpu'] = d['revenue_sum'] / d['distinct_customers']\n",
+    "\n",
+    "\n",
+    "    out = pd.pivot_table(d, index = ['pmd','segment'], columns = ['what_period','is_promo','is_pmd'], \n",
+    "                         values=['revenue_sum','units_sum','distinct_customers']).reset_index()   \n",
+    "\n",
+    "   \n",
     "    return d, out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d, m = max_levels(combined_df,'upc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>what_period</th>\n",
-       "      <th>pmd</th>\n",
-       "      <th>segment</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">post_period</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">pre_period</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>is_promo</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>non_promo</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">promo</th>\n",
-       "      <th>non_promo</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">promo</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>is_pmd</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>non_pmd</th>\n",
-       "      <th>is_pmd</th>\n",
-       "      <th>non_pmd</th>\n",
-       "      <th>non_pmd</th>\n",
-       "      <th>is_pmd</th>\n",
-       "      <th>non_pmd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>non_pmd</td>\n",
-       "      <td>highest_engaged</td>\n",
-       "      <td>5.306987</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.361058</td>\n",
-       "      <td>6.662985</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.841424</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>non_pmd</td>\n",
-       "      <td>low_engaged</td>\n",
-       "      <td>2.552567</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.673816</td>\n",
-       "      <td>1.931473</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.170825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>non_pmd</td>\n",
-       "      <td>lowest_engaged</td>\n",
-       "      <td>2.305617</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.592120</td>\n",
-       "      <td>1.203445</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.052880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>non_pmd</td>\n",
-       "      <td>mid_engaged</td>\n",
-       "      <td>2.977296</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.817451</td>\n",
-       "      <td>2.855199</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.325162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>non_pmd</td>\n",
-       "      <td>not_bought_at_least_year_before_event</td>\n",
-       "      <td>2.354672</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.584607</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>pmd</td>\n",
-       "      <td>highest_engaged</td>\n",
-       "      <td>6.330317</td>\n",
-       "      <td>2.086035</td>\n",
-       "      <td>2.946892</td>\n",
-       "      <td>6.645159</td>\n",
-       "      <td>1.816557</td>\n",
-       "      <td>1.986540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>pmd</td>\n",
-       "      <td>low_engaged</td>\n",
-       "      <td>2.481660</td>\n",
-       "      <td>1.557099</td>\n",
-       "      <td>1.804572</td>\n",
-       "      <td>1.701713</td>\n",
-       "      <td>1.208359</td>\n",
-       "      <td>1.124830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>pmd</td>\n",
-       "      <td>lowest_engaged</td>\n",
-       "      <td>2.385386</td>\n",
-       "      <td>1.466708</td>\n",
-       "      <td>1.761831</td>\n",
-       "      <td>1.175302</td>\n",
-       "      <td>1.068995</td>\n",
-       "      <td>1.033670</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>pmd</td>\n",
-       "      <td>mid_engaged</td>\n",
-       "      <td>2.832289</td>\n",
-       "      <td>1.635553</td>\n",
-       "      <td>1.930301</td>\n",
-       "      <td>2.329836</td>\n",
-       "      <td>1.344718</td>\n",
-       "      <td>1.238264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>pmd</td>\n",
-       "      <td>not_bought_at_least_year_before_event</td>\n",
-       "      <td>2.437840</td>\n",
-       "      <td>1.486902</td>\n",
-       "      <td>1.714865</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "what_period      pmd                                segment post_period  \\\n",
-       "is_promo                                                      non_promo   \n",
-       "is_pmd                                                          non_pmd   \n",
-       "0            non_pmd                        highest_engaged    5.306987   \n",
-       "1            non_pmd                            low_engaged    2.552567   \n",
-       "2            non_pmd                         lowest_engaged    2.305617   \n",
-       "3            non_pmd                            mid_engaged    2.977296   \n",
-       "4            non_pmd  not_bought_at_least_year_before_event    2.354672   \n",
-       "5                pmd                        highest_engaged    6.330317   \n",
-       "6                pmd                            low_engaged    2.481660   \n",
-       "7                pmd                         lowest_engaged    2.385386   \n",
-       "8                pmd                            mid_engaged    2.832289   \n",
-       "9                pmd  not_bought_at_least_year_before_event    2.437840   \n",
-       "\n",
-       "what_period                     pre_period                      \n",
-       "is_promo        promo            non_promo     promo            \n",
-       "is_pmd         is_pmd   non_pmd    non_pmd    is_pmd   non_pmd  \n",
-       "0                 NaN  2.361058   6.662985       NaN  1.841424  \n",
-       "1                 NaN  1.673816   1.931473       NaN  1.170825  \n",
-       "2                 NaN  1.592120   1.203445       NaN  1.052880  \n",
-       "3                 NaN  1.817451   2.855199       NaN  1.325162  \n",
-       "4                 NaN  1.584607        NaN       NaN       NaN  \n",
-       "5            2.086035  2.946892   6.645159  1.816557  1.986540  \n",
-       "6            1.557099  1.804572   1.701713  1.208359  1.124830  \n",
-       "7            1.466708  1.761831   1.175302  1.068995  1.033670  \n",
-       "8            1.635553  1.930301   2.329836  1.344718  1.238264  \n",
-       "9            1.486902  1.714865        NaN       NaN       NaN  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m[['pmd','segment','post_period','pre_period']]"
+    "r, t = max_levels_all(combined_df)"
    ]
   }
  ],
