--- a/Granular PMD Analysis.ipynb
+++ b/Granular PMD Analysis.ipynb
@@ -1422,12 +1422,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped_by_dist = d.groupby([\"total_units\",\"tenure_years\",\n",
-    "                       \"total_units_ttm\",\"rank_transactions_entry\",\"which_relative_to_pmd\",\"promo_dist\"]).apply(get_diff_stats).reset_index()"
+    "def grouped_by_dist_outout(df):\n",
+    "    grouped_by_dist = df.groupby([\"total_units\",\"tenure_years\",\n",
+    "                       \"total_units_ttm\",\"rank_transactions_entry\",\"which_relative_to_pmd\",\"promo_dist\"]).apply(get_diff_stats).reset_index()\n",
+    "    \n",
+    "    summed = grouped_by_dist.groupby(['total_units','tenure_years','rank_transactions_entry','which_relative_to_pmd'])['units'].sum().reset_index()\n",
+    "    \n",
+    "    out = pd.merge(left=grouped_by_dist, right = summed, left_on = ['total_units','tenure_years',\n",
+    "                                                                  'rank_transactions_entry','which_relative_to_pmd'],\n",
+    "                   right_on = ['total_units','tenure_years','rank_transactions_entry','which_relative_to_pmd'], how='left')\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = grouped_by_dist_outout(d)"
    ]
   },
   {
@@ -1452,13 +1471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 275,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "grouped_by_dist.to_csv(\"grouped_by_distDE.csv\")"
+    "#grouped_by_dist.to_csv(\"grouped_by_distDE.csv\")"
    ]
   }
  ],
