--- a/Granular PMD Analysis.ipynb
+++ b/Granular PMD Analysis.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -560,176 +560,13 @@
        "(8273329, 23)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grouped = d.groupby([\"total_units\",\"tenure_years\",\n",
-    "                       \"total_units_ttm\",\"rank_transactions_entry\",\"which_relative_to_pmd\"]).apply(get_diff_stats).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_units</th>\n",
-       "      <th>tenure_years</th>\n",
-       "      <th>total_units_ttm</th>\n",
-       "      <th>rank_transactions_entry</th>\n",
-       "      <th>which_relative_to_pmd</th>\n",
-       "      <th>count_customers</th>\n",
-       "      <th>arpu_monthly_dynamic</th>\n",
-       "      <th>average_frequency</th>\n",
-       "      <th>units</th>\n",
-       "      <th>revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>4.354236</td>\n",
-       "      <td>39.653439</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>2504.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>before</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>4.669233</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>3529.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>pmd_entry</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>3.960991</td>\n",
-       "      <td>75.916667</td>\n",
-       "      <td>756.0</td>\n",
-       "      <td>1228.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>1005.0</td>\n",
-       "      <td>1.164470</td>\n",
-       "      <td>270.935323</td>\n",
-       "      <td>1005.0</td>\n",
-       "      <td>4518.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>before</td>\n",
-       "      <td>1005.0</td>\n",
-       "      <td>4.826338</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1005.0</td>\n",
-       "      <td>4850.47</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   total_units  tenure_years  total_units_ttm  rank_transactions_entry  \\\n",
-       "0            3  btw_1and2yrs              0.0                        2   \n",
-       "1            3  btw_1and2yrs              0.0                        2   \n",
-       "2            3  btw_1and2yrs              0.0                        2   \n",
-       "3            3  btw_1and2yrs              1.0                        2   \n",
-       "4            3  btw_1and2yrs              1.0                        2   \n",
-       "\n",
-       "  which_relative_to_pmd  count_customers  arpu_monthly_dynamic  \\\n",
-       "0                 after            756.0              4.354236   \n",
-       "1                before            756.0              4.669233   \n",
-       "2             pmd_entry            756.0              3.960991   \n",
-       "3                 after           1005.0              1.164470   \n",
-       "4                before           1005.0              4.826338   \n",
-       "\n",
-       "   average_frequency   units  revenue  \n",
-       "0          39.653439   756.0  2504.75  \n",
-       "1           0.000000   756.0  3529.94  \n",
-       "2          75.916667   756.0  1228.03  \n",
-       "3         270.935323  1005.0  4518.05  \n",
-       "4           0.000000  1005.0  4850.47  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#grouped.to_csv(\"grouped_cleanDEReduced.csv\")"
    ]
   },
   {
@@ -755,212 +592,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def grouped_by_dist_outout(df):\n",
-    "    grouped_by_dist = df.groupby([\"total_units\",\"tenure_years\",\n",
+    "def final_output(df):\n",
+    "    grouped = df.groupby([\"total_units\",\"tenure_years\",\n",
+    "                       \"total_units_ttm\",\"rank_transactions_entry\",\"which_relative_to_pmd\"]).apply(get_diff_stats).reset_index()\n",
+    "    \n",
+    "    grouped_dist = df.groupby([\"total_units\",\"tenure_years\",\n",
     "                       \"total_units_ttm\",\"rank_transactions_entry\",\"which_relative_to_pmd\",\"promo_dist\"]).apply(get_diff_stats).reset_index()\n",
     "    \n",
-    "    summed = grouped_by_dist.groupby([\"total_units\",\"tenure_years\",\n",
-    "                       \"total_units_ttm\",\"rank_transactions_entry\",'which_relative_to_pmd'])['units'].sum().reset_index()\n",
     "    \n",
-    "    out = pd.merge(left=grouped_by_dist, right = summed, left_on = ['total_units','tenure_years',\n",
-    "                                                                  'rank_transactions_entry','which_relative_to_pmd'],\n",
-    "                   right_on = ['total_units','tenure_years','rank_transactions_entry','which_relative_to_pmd'], how='left')\n",
-    "    return out"
+    "    output = pd.merge(left = grouped_dist, right = grouped[['total_units','tenure_years','total_units_ttm',\n",
+    "                                                           'rank_transactions_entry','which_relative_to_pmd','units']],\n",
+    "                     left_on = ['total_units','tenure_years','total_units_ttm',\n",
+    "                                                           'rank_transactions_entry','which_relative_to_pmd'],\n",
+    "                     right_on = ['total_units','tenure_years','total_units_ttm',\n",
+    "                                                           'rank_transactions_entry','which_relative_to_pmd'], how = 'left')\n",
+    "    \n",
+    "    return grouped, output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "output = grouped_by_dist_outout(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3233043, 13)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>total_units</th>\n",
-       "      <th>tenure_years</th>\n",
-       "      <th>total_units_ttm_x</th>\n",
-       "      <th>rank_transactions_entry</th>\n",
-       "      <th>which_relative_to_pmd</th>\n",
-       "      <th>promo_dist</th>\n",
-       "      <th>count_customers</th>\n",
-       "      <th>arpu_monthly_dynamic</th>\n",
-       "      <th>average_frequency</th>\n",
-       "      <th>units_x</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>total_units_ttm_y</th>\n",
-       "      <th>units_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>5.127228</td>\n",
-       "      <td>53.035242</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>2140.21</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>756.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>5.127228</td>\n",
-       "      <td>53.035242</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>2140.21</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1005.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>5.127228</td>\n",
-       "      <td>53.035242</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>2140.21</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1987.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>non_promo</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>5.127228</td>\n",
-       "      <td>53.035242</td>\n",
-       "      <td>454.0</td>\n",
-       "      <td>2140.21</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>479.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>btw_1and2yrs</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>after</td>\n",
-       "      <td>pmd_promo</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>3.164539</td>\n",
-       "      <td>18.515464</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>336.99</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>756.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   total_units  tenure_years  total_units_ttm_x  rank_transactions_entry  \\\n",
-       "0            3  btw_1and2yrs                0.0                        2   \n",
-       "1            3  btw_1and2yrs                0.0                        2   \n",
-       "2            3  btw_1and2yrs                0.0                        2   \n",
-       "3            3  btw_1and2yrs                0.0                        2   \n",
-       "4            3  btw_1and2yrs                0.0                        2   \n",
-       "\n",
-       "  which_relative_to_pmd promo_dist  count_customers  arpu_monthly_dynamic  \\\n",
-       "0                 after  non_promo            454.0              5.127228   \n",
-       "1                 after  non_promo            454.0              5.127228   \n",
-       "2                 after  non_promo            454.0              5.127228   \n",
-       "3                 after  non_promo            454.0              5.127228   \n",
-       "4                 after  pmd_promo            291.0              3.164539   \n",
-       "\n",
-       "   average_frequency  units_x  revenue  total_units_ttm_y  units_y  \n",
-       "0          53.035242    454.0  2140.21                0.0    756.0  \n",
-       "1          53.035242    454.0  2140.21                1.0   1005.0  \n",
-       "2          53.035242    454.0  2140.21                2.0   1987.0  \n",
-       "3          53.035242    454.0  2140.21                3.0    479.0  \n",
-       "4          18.515464    291.0   336.99                0.0    756.0  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output.head()"
+    "grouped, dist = final_output(d)"
    ]
   },
   {
@@ -970,8 +632,28 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "output.to_csv(\"grouped_by_distDEReduced.csv\")"
+    "#grouped.to_csv(\"grouped_cleanDEReduced.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#output.to_csv(\"grouped_by_distDEReduced.csv\")"
    ]
   }
  ],
