--- a/Granular PMD Analysis.ipynb
+++ b/Granular PMD Analysis.ipynb
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -613,6 +613,7 @@
     "                     right_on = ['total_units','tenure_years','total_units_ttm',\n",
     "                                                           'rank_transactions_entry','which_relative_to_pmd'], how = 'left')\n",
     "    \n",
+    "    output['share'] = output['units_x'] / output['units_y']\n",
     "    return grouped, output"
    ]
   },
@@ -628,15 +629,167 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_units</th>\n",
+       "      <th>tenure_years</th>\n",
+       "      <th>total_units_ttm</th>\n",
+       "      <th>rank_transactions_entry</th>\n",
+       "      <th>which_relative_to_pmd</th>\n",
+       "      <th>promo_dist</th>\n",
+       "      <th>count_customers</th>\n",
+       "      <th>arpu_monthly_dynamic</th>\n",
+       "      <th>average_frequency</th>\n",
+       "      <th>units_x</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>units_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>after</td>\n",
+       "      <td>non_promo</td>\n",
+       "      <td>454.0</td>\n",
+       "      <td>5.127228</td>\n",
+       "      <td>53.035242</td>\n",
+       "      <td>454.0</td>\n",
+       "      <td>2140.21</td>\n",
+       "      <td>756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>after</td>\n",
+       "      <td>pmd_promo</td>\n",
+       "      <td>291.0</td>\n",
+       "      <td>3.164539</td>\n",
+       "      <td>18.515464</td>\n",
+       "      <td>291.0</td>\n",
+       "      <td>336.99</td>\n",
+       "      <td>756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>after</td>\n",
+       "      <td>vendisto_promo</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.923622</td>\n",
+       "      <td>46.545455</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>27.55</td>\n",
+       "      <td>756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>before</td>\n",
+       "      <td>non_promo</td>\n",
+       "      <td>746.0</td>\n",
+       "      <td>4.694960</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>746.0</td>\n",
+       "      <td>3502.44</td>\n",
+       "      <td>756.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>btw_1and2yrs</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>before</td>\n",
+       "      <td>vendisto_promo</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>27.50</td>\n",
+       "      <td>756.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total_units  tenure_years  total_units_ttm  rank_transactions_entry  \\\n",
+       "0            3  btw_1and2yrs              0.0                        2   \n",
+       "1            3  btw_1and2yrs              0.0                        2   \n",
+       "2            3  btw_1and2yrs              0.0                        2   \n",
+       "3            3  btw_1and2yrs              0.0                        2   \n",
+       "4            3  btw_1and2yrs              0.0                        2   \n",
+       "\n",
+       "  which_relative_to_pmd      promo_dist  count_customers  \\\n",
+       "0                 after       non_promo            454.0   \n",
+       "1                 after       pmd_promo            291.0   \n",
+       "2                 after  vendisto_promo             11.0   \n",
+       "3                before       non_promo            746.0   \n",
+       "4                before  vendisto_promo             10.0   \n",
+       "\n",
+       "   arpu_monthly_dynamic  average_frequency  units_x  revenue  units_y  \n",
+       "0              5.127228          53.035242    454.0  2140.21    756.0  \n",
+       "1              3.164539          18.515464    291.0   336.99    756.0  \n",
+       "2              3.923622          46.545455     11.0    27.55    756.0  \n",
+       "3              4.694960           0.000000    746.0  3502.44    756.0  \n",
+       "4              2.750000           0.000000     10.0    27.50    756.0  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -647,13 +800,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#output.to_csv(\"grouped_by_distDEReduced.csv\")"
+    "#dist.to_csv(\"grouped_by_distDEReduced.csv\")"
    ]
   }
  ],
